--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -559,12 +559,58 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .absolute{
   position: absolute;
 }
 
 .relative{
   position: relative;
+}
+
+.inset-0{
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.inset-x-0{
+  left: 0px;
+  right: 0px;
 }
 
 .top-0{
@@ -592,21 +638,58 @@ video {
   margin-right: auto;
 }
 
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .-mx-4{
   margin-left: -1rem;
   margin-right: -1rem;
 }
 
-.mb-16{
-  margin-bottom: 4rem;
+.mr-8{
+  margin-right: 2rem;
 }
 
-.mb-6{
-  margin-bottom: 1.5rem;
+.ml-2{
+  margin-left: 0.5rem;
+}
+
+.-mr-1{
+  margin-right: -0.25rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.-mt-2{
+  margin-top: -0.5rem;
+}
+
+.-mr-2{
+  margin-right: -0.5rem;
+}
+
+.mb-8{
+  margin-bottom: 2rem;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
 }
 
 .mb-10{
   margin-bottom: 2.5rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
 }
 
 .-mt-8{
@@ -621,56 +704,20 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
+.mb-1{
+  margin-bottom: 0.25rem;
+}
+
+.mb-16{
+  margin-bottom: 4rem;
 }
 
 .mr-2{
   margin-right: 0.5rem;
 }
 
-.ml-2{
-  margin-left: 0.5rem;
-}
-
-.mb-8{
-  margin-bottom: 2rem;
-}
-
-.mt-6{
-  margin-top: 1.5rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
-}
-
-.mr-1{
-  margin-right: 0.25rem;
-}
-
-.mt-1{
-  margin-top: 0.25rem;
-}
-
-.mb-3{
-  margin-bottom: 0.75rem;
-}
-
-.mr-8{
-  margin-right: 2rem;
-}
-
-.-mr-1{
-  margin-right: -0.25rem;
-}
-
-.-mt-2{
-  margin-top: -0.5rem;
-}
-
-.-mr-2{
-  margin-right: -0.5rem;
+.mb-12{
+  margin-bottom: 3rem;
 }
 
 .inline-block{
@@ -697,8 +744,8 @@ video {
   height: 3rem;
 }
 
-.h-10{
-  height: 2.5rem;
+.h-5{
+  height: 1.25rem;
 }
 
 .h-6{
@@ -741,36 +788,36 @@ video {
   height: 10rem;
 }
 
-.h-5{
-  height: 1.25rem;
+.w-8{
+  width: 2rem;
 }
 
-.h-6{
-  height: 1.5rem;
-}
-
-.w-12{
-  width: 3rem;
-}
-
-.w-32{
-  width: 8rem;
+.w-5{
+  width: 1.25rem;
 }
 
 .w-full{
   width: 100%;
 }
 
-.w-1{
-  width: 0.25rem;
-}
-
-.w-8{
-  width: 2rem;
+.w-32{
+  width: 8rem;
 }
 
 .w-16{
   width: 4rem;
+}
+
+.w-64{
+  width: 16rem;
+}
+
+.w-12{
+  width: 3rem;
+}
+
+.w-10{
+  width: 2.5rem;
 }
 
 .w-1{
@@ -779,10 +826,6 @@ video {
 
 .w-7{
   width: 1.75rem;
-}
-
-.w-3{
-  width: 0.75rem;
 }
 
 .w-28{
@@ -797,8 +840,8 @@ video {
   width: 10rem;
 }
 
-.w-5{
-  width: 1.25rem;
+.min-w-full{
+  min-width: 100%;
 }
 
 .max-w-xl{
@@ -873,24 +916,16 @@ video {
   justify-content: space-between;
 }
 
-.gap-8{
-  gap: 2rem;
-}
-
 .gap-10{
   gap: 2.5rem;
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+.gap-3{
+  gap: 0.75rem;
 }
 
-.space-x-3 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+.gap-6{
+  gap: 1.5rem;
 }
 
 .gap-5{
@@ -913,16 +948,26 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.space-x-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
 
-.rounded-full{
-  border-radius: 9999px;
-}
-
 .rounded{
   border-radius: 0.25rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-sm{
@@ -965,14 +1010,9 @@ video {
   background-color: rgb(115 228 188 / var(--tw-bg-opacity));
 }
 
-.bg-slate-100{
+.bg-white{
   --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-.bg-mint-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(158 240 211 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-deep-purple-accent-400{
@@ -980,9 +1020,14 @@ video {
   background-color: rgb(101 31 255 / var(--tw-bg-opacity));
 }
 
-.bg-white{
+.bg-mint-700{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(21 28 25 / var(--tw-bg-opacity));
+}
+
+.bg-stone-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(41 37 36 / var(--tw-bg-opacity));
 }
 
 .bg-slate-100{
@@ -1004,16 +1049,16 @@ video {
      object-fit: cover;
 }
 
-.p-px{
-  padding: 1px;
+.p-2{
+  padding: 0.5rem;
 }
 
 .p-5{
   padding: 1.25rem;
 }
 
-.p-2{
-  padding: 0.5rem;
+.p-8{
+  padding: 2rem;
 }
 
 .p-px{
@@ -1029,9 +1074,9 @@ video {
   padding-right: 1rem;
 }
 
-.py-16{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .px-6{
@@ -1039,14 +1084,14 @@ video {
   padding-right: 1.5rem;
 }
 
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .pt-16{
@@ -1061,13 +1106,21 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.text-left{
+  text-align: left;
+}
+
+.text-center{
+  text-align: center;
+}
+
 .font-sans{
   font-family: Montserrat, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-base{
@@ -1080,9 +1133,19 @@ video {
   line-height: 1.25rem;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold{
@@ -1113,27 +1176,16 @@ video {
   line-height: 1.25rem;
 }
 
-.tracking-tight{
-  letter-spacing: -0.025em;
-}
-
 .tracking-wide{
   letter-spacing: 0.025em;
 }
 
-.text-blue-700{
-  --tw-text-opacity: 1;
-  color: rgb(25 118 210 / var(--tw-text-opacity));
+.tracking-tight{
+  letter-spacing: -0.025em;
 }
 
-.text-mint-900{
-  --tw-text-opacity: 1;
-  color: rgb(6 35 25 / var(--tw-text-opacity));
-}
-
-.text-slate-100{
-  --tw-text-opacity: 1;
-  color: rgb(241 245 249 / var(--tw-text-opacity));
+.tracking-wider{
+  letter-spacing: 0.05em;
 }
 
 .text-mint-100{
@@ -1141,9 +1193,19 @@ video {
   color: rgb(115 228 188 / var(--tw-text-opacity));
 }
 
-.text-gray-900{
+.text-slate-100{
   --tw-text-opacity: 1;
-  color: rgb(33 33 33 / var(--tw-text-opacity));
+  color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
+.text-mint-900{
+  --tw-text-opacity: 1;
+  color: rgb(6 35 25 / var(--tw-text-opacity));
+}
+
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(117 117 117 / var(--tw-text-opacity));
 }
 
 .text-deep-purple-accent-400{
@@ -1156,17 +1218,17 @@ video {
   color: rgb(66 66 66 / var(--tw-text-opacity));
 }
 
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(158 158 158 / var(--tw-text-opacity));
-}
-
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(117 117 117 / var(--tw-text-opacity));
-}
-
 .text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(97 97 97 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-blue-gray-100{
   --tw-text-opacity: 1;
   color: rgb(207 216 220 / var(--tw-text-opacity));
 }
@@ -1176,8 +1238,9 @@ video {
   color: rgb(189 189 189 / var(--tw-text-opacity));
 }
 
-.underline{
-  text-decoration-line: underline;
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(33 33 33 / var(--tw-text-opacity));
 }
 
 .shadow-md{
@@ -1192,10 +1255,34 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.transition-colors{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .transition{
@@ -1206,8 +1293,8 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-colors{
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+.transition-shadow{
+  transition-property: box-shadow;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1238,14 +1325,19 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:border-mint-100:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(115 228 188 / var(--tw-border-opacity));
+}
+
+.hover\:border-mint-50:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(158 240 211 / var(--tw-border-opacity));
+}
+
 .hover\:bg-mint-50:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(158 240 211 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-deep-purple-accent-700:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(98 0 234 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-deep-purple-50:hover{
@@ -1258,14 +1350,19 @@ video {
   background-color: rgb(238 238 238 / var(--tw-bg-opacity));
 }
 
-.hover\:text-mint-50:hover{
-  --tw-text-opacity: 1;
-  color: rgb(158 240 211 / var(--tw-text-opacity));
+.hover\:bg-deep-purple-accent-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(98 0 234 / var(--tw-bg-opacity));
 }
 
-.hover\:text-deep-purple-800:hover{
+.hover\:bg-mint-900:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 35 25 / var(--tw-bg-opacity));
+}
+
+.hover\:text-mint-100:hover{
   --tw-text-opacity: 1;
-  color: rgb(69 39 160 / var(--tw-text-opacity));
+  color: rgb(115 228 188 / var(--tw-text-opacity));
 }
 
 .hover\:text-deep-purple-accent-400:hover{
@@ -1273,9 +1370,20 @@ video {
   color: rgb(101 31 255 / var(--tw-text-opacity));
 }
 
-.hover\:text-mint-100:hover{
+.hover\:text-mint-50:hover{
   --tw-text-opacity: 1;
-  color: rgb(115 228 188 / var(--tw-text-opacity));
+  color: rgb(158 240 211 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-200:hover{
+  --tw-text-opacity: 1;
+  color: rgb(238 238 238 / var(--tw-text-opacity));
+}
+
+.hover\:shadow-2xl:hover{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:shadow-xl:hover{
@@ -1328,6 +1436,11 @@ video {
 .group:hover .group-hover\:scale-y-100{
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px){
@@ -1392,20 +1505,8 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .sm\:flex-row{
-    flex-direction: row;
-  }
-
-  .sm\:space-y-0 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-y-reverse: 0;
-    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(0px * var(--tw-space-y-reverse));
-  }
-
-  .sm\:space-x-5 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+  .sm\:p-10{
+    padding: 2.5rem;
   }
 
   .sm\:text-center{
@@ -1428,6 +1529,11 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:inset-y-0{
+    top: 0px;
+    bottom: 0px;
+  }
+
   .md\:mx-auto{
     margin-left: auto;
     margin-right: auto;
@@ -1439,6 +1545,10 @@ video {
 
   .md\:block{
     display: block;
+  }
+
+  .md\:flex{
+    display: flex;
   }
 
   .md\:max-w-full{
@@ -1497,20 +1607,16 @@ video {
     max-width: 32rem;
   }
 
-  .lg\:max-w-sm{
-    max-width: 24rem;
-  }
-
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .lg\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
