--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -127,13 +127,13 @@
   {{!-- Show errors --}}
   {{#if flashErrors }}
     {{#each flashErrors }}
-      <div class="flash flash--error">{{ this }}</div>
+      <div class="flash flash--error flex justify-center w-full bg-mint-100">{{ this }}</div>
     {{/each}}
   {{/if}}
   {{!-- Show success messages --}}
   {{#if flashSuccesses }}
     {{#each flashSuccesses }}
-      <div class="flash flash--success">{{ this }}</div>
+      <div class="flash flash--success flex justify-center w-full bg-mint-100">{{ this }}</div>
     {{/each}}
   {{/if}}
   {{> yield }}
