--- a/app/pages/about.hbs
+++ b/app/pages/about.hbs
@@ -64,7 +64,7 @@
               <img src="https://avatars.githubusercontent.com/u/89877041?v=4" alt="michael c. github profile picture" class="w-16 h-16 rounded-full transition duration-500 ease-out group-hover:rotate-180">
               <h1 class="text-2xl font-semibold transition duration-200 ease-linear hover:text-mint-100">Michael C.</h1>
             </div>
-            <p class="transition duration-200 ease-linear hover:text-mint-100 text-center">User Access Page Engineer</p>
+            <p class="transition duration-200 ease-linear hover:text-mint-100 text-center">User Access Engineer</p>
             <p class="text-gray-400 italic w-64 h-full transition duration-200 ease-linear hover:text-gray-200 text-center text-sm">tailwind + remake was a nightmare to work with</p>
           </div>
           <a href="https://github.com/kolemor/cpsc349-proj2" target="_blank" class="w-64 inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-mint-900 transition duration-200 rounded shadow-md bg-mint-100 hover:bg-mint-50 hover:scale-105">
