--- a/app/pages/about.hbs
+++ b/app/pages/about.hbs
@@ -82,7 +82,7 @@
               <h1 class="text-2xl font-semibold transition duration-200 ease-linear hover:text-mint-100">Marl R.</h1>
             </div>
             <p class="transition duration-200 ease-linear hover:text-mint-100 text-center">Role</p>
-            <p class="text-gray-400 italic w-64 h-full transition duration-200 ease-linear hover:text-gray-200 text-center text-sm">Insert quote here</p>
+            <p class="text-gray-400 italic w-64 h-full transition duration-200 ease-linear hover:text-gray-200 text-center text-sm">Remake, why are you so delicate?</p>
           </div>
           <a href="https://github.com/mrmarlrico/cpsc349-proj2" target="_blank" class="w-64 inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-mint-900 transition duration-200 rounded shadow-md bg-mint-100 hover:bg-mint-50 hover:scale-105">
             GitHub Repo
